Implements PollCmd